include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = totem
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 

DOC_FIGURES  = 	figures/totem_show_playlist_button.png 	\
		figures/totem_next_button.png		\
		figures/totem_start_window.png		\
		figures/totem_pause_button.png		\
		figures/totem_volume_maximum_button.png	\
		figures/totem_play_button.png		\
		figures/totem_volume_mute_button.png	\
		figures/totem_previous_button.png

DOC_LINGUAS = ca de en_GB es fr pa pt_BR ru sv uk

SUBDIRS = bg
