include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

# Module name
DOC_ID = totem

# List of figures to be included
DOC_FIGURES = \
  figures/totem-main-window.png

# List of pages
DOC_PAGES = \
  file-open.page \
  file-save.page \
  index.page \
  introduction.page \
  keyboard-shortcuts.page \
  navigation.page \
  playing-DVD.page \
  playing-order.page \
  playlist.page \
  plugins.page \
  preferences.page \
  properties.page \
  screenshot-gallery.page \
  screenshot.page \
  sidebar.page \
  sound-language.page \
  sound-volume.page \
  subtitles.page \
  supported-formats.page \
  troubleshooting-Audio-CD.page \
  troubleshooting-DVD.page \
  troubleshooting-subtitles.page \
  view-zoom.page

DOC_LINGUAS = bg ca cs da de el en_GB es eu fi fr gl it ja oc pa pl pt_BR ro ru sl sv uk zh_CN zh_HK zh_TW

-include $(top_srcdir)/git.mk
