sources = [
  'file-open.page',
  'index.page',
  'introduction.page',
  'keyboard-shortcuts.page',
  'navigation.page',
  'playing-DVD.page',
  'playing-order.page',
  'playlist.page',
  'plugins.page',
  'preferences.page',
  'properties.page',
  'screenshot-gallery.page',
  'screenshot.page',
  'sound-language.page',
  'sound-volume.page',
  'subtitles.page',
  'supported-formats.page',
  'troubleshooting-Audio-CD.page',
  'troubleshooting-DVD.page',
  'troubleshooting-subtitles.page',
  'view-zoom.page'
]

media = [
  'figures/totem-main-window.png',
  'figures/volume-button-slider.png'
]

gnome.yelp(
  meson.project_name(),
  sources: sources,
  media: media,
  symlink_media: true
)

