sources = [
  'file-open.page',
  'index.page',
  'navigation.page',
  'playing-DVD.page',
  'plugins.page',
  'preferences.page',
  'properties.page',
  'screenshot-gallery.page',
  'screenshot.page',
  'sound-language.page',
  'sound-volume.page',
  'subtitles.page',
  'supported-formats.page',
  'troubleshooting-Audio-CD.page',
  'troubleshooting-DVD.page',
  'troubleshooting-subtitles.page',
  'view-zoom.page'
]

media = [
  'figures/totem.png',
  'figures/volume-button-slider.png'
]

gnome.yelp(
  meson.project_name(),
  sources: sources,
  media: media,
  symlink_media: true
)
