sources = [
  'adjust-speed.page',
  'channels.page',
  'file-open.page',
  'index.page',
  'navigation.page',
  'playing-DVD.page',
  'preferences.page',
  'properties.page',
  'screenshot-gallery.page',
  'screenshot.page',
  'sound-language.page',
  'sound-volume.page',
  'subtitles.page',
  'supported-formats.page',
  'troubleshooting-Audio-CD.page',
  'troubleshooting-debug.page',
  'troubleshooting-subtitles.page',
  'view-zoom.page'
]

media = [
  'figures/dvd-gnome-notification.png',
  'figures/dvd-nautilus.png',
  'figures/org.gnome.Totem.svg',
  'figures/volume-button-slider.png'
]

gnome.yelp(
  meson.project_name(),
  sources: sources,
  media: media,
  symlink_media: true
)
